Harjot's Feature Selection

--- a/src/notebooks/data-exploration-and-feature-selection.ipynb
+++ b/src/notebooks/data-exploration-and-feature-selection.ipynb
@@ -22,8 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.read_csv('../car_accident_dataset/car_accident_data/US_Accidents_Dec20.csv')\n",
-    "df = pd.read_csv('../../../../US_Accidents_Dec20.csv')"
+    "df = pd.read_csv('../car_accident_dataset/car_accident_data/US_Accidents_Dec20.csv')"
    ]
   },
   {
